# pqca

./: README.md  build_docs.sh  setup.cfg
docs/source/: conf.py  index.rst  modules.rst  pqca.automaton.rst  pqca.backend.rst  pqca.exceptions.rst  pqca.rst  pqca.tessellation.rst  pqca.update_frame.rst  pqca.vector.rst
pqca/: __init__.py  automaton.py  backend.py  exceptions.py  tessellation.py  update_frame.py  vector.py
src/pqca/: __init__.py  automaton.py  backend.py  exceptions.py  tessellation.py  update_frame.py  vector.py
test/: test_automaton.py  test_tessellation.py  test_update_frame.py  test_vectors.py
