[metadata]
name = pqca
version = 0.0.1
description = Construct and simulate partitioned quantum cellular automata
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = quantum computing, cellular automata
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = pqca
install_requires =
    qiskit