[metadata]
name = pqca
version = 1.0.0
author = Hector Miller-Bakewell
author_email = hmillerbakewell@gmail.com
description = Construct and simulate partitioned quantum cellular automata
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/hmillerbakewell/partitioned-quantum-cellular-automata
keywords = quantum computing, cellular automata
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src